set (gui_SRCS
	hot-key.cpp
	status-icon.cpp

	actions/action.cpp
	actions/actions.cpp
	actions/action-description.cpp

	widgets/account-buddy-list-widget.cpp
	widgets/account-avatar-widget.cpp
	widgets/accounts-combo-box.cpp
	widgets/buddies-list-view.cpp
	widgets/buddies-list-view-avatar-painter.cpp
	widgets/buddies-list-view-delegate.cpp
	widgets/buddies-list-view-delegate-configuration.cpp
	widgets/buddies-list-view-item-painter.cpp
	widgets/buddies-list-view-menu-item.cpp
	widgets/buddies-list-view-menu-manager.cpp
	widgets/buddies-list-widget.cpp
	widgets/buddy-avatar-widget.cpp
	widgets/buddy-contacts-table-delegate.cpp
	widgets/buddy-contacts-table-item.cpp
	widgets/buddy-contacts-table-model.cpp
	widgets/buddy-contacts-table-model-proxy.cpp
	widgets/buddy-contacts-table.cpp
	widgets/buddy-general-configuration-widget.cpp
	widgets/buddy-groups-configuration-widget.cpp
	widgets/buddy-personal-info-configuration-widget.cpp
	widgets/buddy-options-configuration-widget.cpp
	widgets/buddy-info-panel.cpp
	widgets/chat-edit-box.cpp
	widgets/chat-edit-box-size-manager.cpp
	widgets/chat-messages-view.cpp
	widgets/chat-view-network-access-manager.cpp
	widgets/chat-widget.cpp
	widgets/chat-widget-actions.cpp
	widgets/chat-widget-manager.cpp
	widgets/choose-identity-widget.cpp
	widgets/color-button.cpp
	widgets/color-selector.cpp
	widgets/custom-input.cpp
	widgets/custom-input-menu-item.cpp
	widgets/custom-input-menu-manager.cpp
	widgets/delayed-line-edit.cpp
	widgets/file-transfer-widget.cpp
	widgets/filter-widget.cpp
	widgets/group-tab-bar.cpp
	widgets/groups-combo-box.cpp
	widgets/identities-combo-box.cpp
	widgets/kadu-web-view.cpp
	widgets/line-edit-clear-button.cpp
	widgets/line-edit-with-clear-button.cpp
	widgets/modal-configuration-widget.cpp
	widgets/path-edit.cpp
	widgets/path-list-edit.cpp
	widgets/progress-icon.cpp
	widgets/progress-label.cpp
	widgets/protocols-combo-box.cpp
	widgets/proxy-group-box.cpp
	widgets/preview.cpp
	widgets/select-buddy-combo-box.cpp
	widgets/select-buddy-popup.cpp
	widgets/select-file.cpp
	widgets/select-font.cpp
	widgets/status-button.cpp
	widgets/status-buttons.cpp
	widgets/status-menu.cpp
	widgets/syntax-editor.cpp
	widgets/toolbar.cpp
	widgets/tool-tip-class-manager.cpp

	widgets/configuration/buddy-list-background-colors-widget.cpp
	widgets/configuration/config-action-button.cpp
	widgets/configuration/config-check-box.cpp
	widgets/configuration/config-color-button.cpp
	widgets/configuration/config-combo-box.cpp
	widgets/configuration/config-gg-password-edit.cpp
	widgets/configuration/config-hot-key-edit.cpp
	widgets/configuration/config-label.cpp
	widgets/configuration/config-line-separator.cpp
	widgets/configuration/config-line-edit.cpp
	widgets/configuration/config-list-widget.cpp
	widgets/configuration/config-path-list-edit.cpp
	widgets/configuration/config-preview.cpp
	widgets/configuration/config-radio-button.cpp
	widgets/configuration/config-select-file.cpp
	widgets/configuration/config-select-font.cpp
	widgets/configuration/config-slider.cpp
	widgets/configuration/config-spin-box.cpp
	widgets/configuration/config-syntax-editor.cpp
	widgets/configuration/config-widget-value.cpp
	widgets/configuration/config-widget.cpp
	widgets/configuration/configuration-widget.cpp
	widgets/configuration/config-section.cpp
	widgets/configuration/config-group-box.cpp
	widgets/configuration/config-tab.cpp
	widgets/configuration/notifier-configuration-widget.cpp
	widgets/configuration/notify-group-box.cpp
	widgets/configuration/notify-tree-widget.cpp

	windows/about.cpp
	windows/add-buddy-window.cpp
	windows/buddy-data-window.cpp
	windows/buddy-data-window-aware-object.cpp
	windows/buddy-delete-window.cpp
	windows/chat-window.cpp
	windows/choose-description.cpp
	windows/configuration-window.cpp
	windows/file-transfer-window.cpp
	windows/group-properties-window.cpp
	windows/kadu-window.cpp
	windows/kadu-window-actions.cpp
	windows/main-configuration-window.cpp
	windows/main-window.cpp
	windows/merge-buddies-window.cpp
	windows/message-dialog.cpp
	windows/modules-window.cpp
	windows/multilogon-window.cpp
	windows/password-window.cpp
	windows/progress-window.cpp
	windows/search-window.cpp
	windows/search-window-actions.cpp
	windows/subscription-window.cpp
	windows/syntax-editor-window.cpp
	windows/updates-dialog.cpp
	windows/window-notifier-window.cpp
	windows/your-accounts.cpp

	windows/open-chat-with/open-chat-with.cpp
	windows/open-chat-with/open-chat-with-contact-list-runner.cpp
	windows/open-chat-with/open-chat-with-runner-manager.cpp
)

set (gui_MOC_SRCS
	hot-key.h
	status-icon.h

	actions/action.h
	actions/actions.h
	actions/action-description.h

	widgets/account-add-widget.h
	widgets/account-avatar-widget.h
	widgets/account-buddy-list-widget.h
	widgets/account-create-widget.h
	widgets/account-edit-widget.h
	widgets/accounts-combo-box.h
	widgets/buddies-list-view.h
	widgets/buddies-list-view-delegate.h
	widgets/buddies-list-widget.h
	widgets/buddy-avatar-widget.h
	widgets/buddy-contacts-table-delegate.h
	widgets/buddy-contacts-table-item.h
	widgets/buddy-contacts-table-model.h
	widgets/buddy-contacts-table-model-proxy.h
	widgets/buddy-contacts-table.h
	widgets/buddy-general-configuration-widget.h
	widgets/buddy-groups-configuration-widget.h
	widgets/buddies-list-view-menu-manager.h
	widgets/buddy-personal-info-configuration-widget.h
	widgets/buddy-options-configuration-widget.h
	widgets/buddy-info-panel.h
	widgets/chat-edit-box.h
	widgets/chat-edit-box-size-manager.h
	widgets/chat-messages-view.h
	widgets/chat-view-network-access-manager.h
	widgets/chat-widget.h
	widgets/chat-widget-actions.h
	widgets/chat-widget-manager.h
	widgets/choose-identity-widget.h
	widgets/color-button.h
	widgets/color-selector.h
	widgets/custom-input.h
	widgets/custom-input-menu-manager.h
	widgets/delayed-line-edit.h
	widgets/file-transfer-widget.h
	widgets/filter-widget.h
	widgets/group-tab-bar.h
	widgets/groups-combo-box.h
	widgets/identities-combo-box.h
	widgets/kadu-web-view.h
	widgets/line-edit-clear-button.h
	widgets/line-edit-with-clear-button.h
	widgets/modal-configuration-widget.h
	widgets/path-edit.h
	widgets/path-list-edit.h
	widgets/preview.h
	widgets/progress-icon.h
	widgets/progress-label.h
	widgets/protocols-combo-box.h
	widgets/proxy-group-box.h
	widgets/select-buddy-combo-box.h
	widgets/select-buddy-popup.h
	widgets/select-file.h
	widgets/select-font.h
	widgets/status-button.h
	widgets/status-buttons.h
	widgets/status-menu.h
	widgets/syntax-editor.h
	widgets/toolbar.h

	widgets/configuration/buddy-list-background-colors-widget.h
	widgets/configuration/config-action-button.h
	widgets/configuration/config-check-box.h
	#widgets/configuration/config-widget-value.h
	widgets/configuration/configuration-widget.h
	widgets/configuration/config-label.h
	widgets/configuration/config-color-button.h
	widgets/configuration/config-combo-box.h
	widgets/configuration/config-gg-password-edit.h
	widgets/configuration/config-group-box.h
	widgets/configuration/config-hot-key-edit.h
	widgets/configuration/config-line-edit.h
	widgets/configuration/config-line-separator.h
	widgets/configuration/config-list-widget.h
	widgets/configuration/config-path-list-edit.h
	widgets/configuration/config-preview.h
	widgets/configuration/config-radio-button.h
	widgets/configuration/config-section.h
	widgets/configuration/config-select-file.h
	widgets/configuration/config-select-font.h
	widgets/configuration/config-slider.h
	widgets/configuration/config-spin-box.h
	widgets/configuration/config-syntax-editor.h
	widgets/configuration/config-tab.h
	widgets/configuration/kadu-scroll-area.h
	widgets/configuration/kadu-tab-widget.h
	widgets/configuration/notify-tree-widget.h
	widgets/configuration/notifier-configuration-widget.h
	widgets/configuration/notify-group-box.h

	windows/about.h
	windows/add-buddy-window.h
	windows/buddy-data-window.h
	windows/buddy-delete-window.h
	windows/chat-window.h
	windows/choose-description.h
	windows/configuration-window.h
	windows/file-transfer-window.h
	windows/group-properties-window.h
	windows/kadu-window.h
	windows/kadu-window-actions.h
	windows/main-configuration-window.h
	windows/main-window.h
	windows/merge-buddies-window.h
	windows/modules-window.h
	windows/multilogon-window.h
	windows/password-window.h
	windows/progress-window.h
	windows/search-window.h
	windows/search-window-actions.h
	windows/subscription-window.h
	windows/syntax-editor-window.h
	windows/updates-dialog.h
	windows/window-notifier-window.h
	windows/your-accounts.h

	windows/open-chat-with/open-chat-with.h
	windows/open-chat-with/open-chat-with-runner-manager.h
)

if (MINGW)
	set_source_files_properties (windows/open-chat-with/open-chat-with.cpp PROPERTIES
		COMPILE_FLAGS "-fno-strict-aliasing"
	)
endif (MINGW)

qt4_wrap_cpp (gui_MOC_FILES ${gui_MOC_SRCS})

add_library (gui
	STATIC
	${gui_SRCS}
	${gui_MOC_FILES}
)

set_target_properties (gui PROPERTIES COMPILE_DEFINITIONS KADULIB)
